lesson/kub_23/ingress-auth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-auth
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
    - host: test.ingress.rebrainme.com
      http:
        paths:
          - backend:
              serviceName: svc-internal
              servicePort: 80
